[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://fonts/Audiowide-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://2d arts/playerL.png" type="Texture" id=3]
[ext_resource path="res://2d arts/playerN1.png" type="Texture" id=4]
[ext_resource path="res://2d arts/playerC.png" type="Texture" id=5]
[ext_resource path="res://2d arts/playerL1.png" type="Texture" id=6]
[ext_resource path="res://2d arts/playerL2.png" type="Texture" id=7]
[ext_resource path="res://2d arts/playerL4.png" type="Texture" id=8]
[ext_resource path="res://shaders/teleport.gdshader" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 9 )
shader_param/progress = 0.0
shader_param/noise_desnity = 60.0
shader_param/beam_size = 0.15
shader_param/color = Color( 0, 1.02, 1.2, 1 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Iced",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "Liquid",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
} ]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 8 ), SubResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Gradient" id=12]
interpolation_mode = 1
offsets = PoolRealArray( 0, 0.21118, 0.409938, 0.639752, 0.826087 )
colors = PoolColorArray( 0.0666667, 0.168627, 0.317647, 1, 0.12549, 0.560784, 0.780392, 1, 0.341176, 0.705882, 0.890196, 1, 0.141176, 0.623529, 0.870588, 1, 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="DynamicFont" id=6]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 1 )
state = "Iced"

[node name="AnimatedSprite2D" type="AnimatedSprite" parent="."]
material = SubResource( 8 )
position = Vector2( 0, -1 )
scale = Vector2( 0.08, 0.08 )
frames = SubResource( 11 )
animation = "Liquid"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
pause_mode = 2
anims/RESET = SubResource( 9 )
anims/anim = SubResource( 10 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
scale = Vector2( 0.09, 0.09 )
emitting = false
amount = 64
lifetime = 1.2
one_shot = true
explosiveness = 1.0
randomness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 100, 100 )
spread = 180.0
gravity = Vector2( 0, 1200 )
initial_velocity = 500.0
initial_velocity_random = 1.0
scale_amount = 40.0
color_initial_ramp = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -26.0
margin_right = 20.0
margin_bottom = -12.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="BufferTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="LiquidTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="LiquidTimer" to="." method="_on_LiquidTimer_timeout"]
